ajout de constante dans le filtre grp

--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -3,7 +3,7 @@ ROLE_ADMIN: 'Administrateur'
 collective: 'Collectif'
 groups: 'En groupe'
 individual: 'Individuel'
-head: 'head'
+head: 'Entête'
 together: 'Ensemble'
 autonomy: 'En autonomie'
 class: 'En présentiel'
