lister les syllabus done

--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -19,3 +19,15 @@ app:
         label: 'Intitulé'
         mode: 'Mode'
         grp: 'Groupe'
+    course_info:
+      label:
+        title: 'Titre'
+    course:
+      label:
+        type: 'Code établissement'
+    year:
+      label:
+        label: 'Année'
+    structure:
+      label:
+        label: 'Label'
