Replace type by etbid in filter syllabus list

--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -24,7 +24,8 @@ app:
         title: 'Titre'
     course:
       label:
-        type: 'Code établissement'
+        type: 'Type'
+        etb_id: 'Code établissement'
     year:
       label:
         label: 'Année'
