lister les équipements done

--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -38,3 +38,8 @@ app:
         campus: 'Campus'
         obsolete: 'Obsolète'
         structure: 'Structure'
+    equipment:
+      label:
+        label: 'Label'
+        label_visibility: 'Afficher le label'
+        obsolete: 'Obsolète'
