ajout de la liste des champs concernés par la duplication de syllabus

--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -43,3 +43,7 @@ app:
         label: 'Label'
         label_visibility: 'Afficher le label'
         obsolete: 'Obsolète'
+    syllabus_duplication_field:
+      label:
+        import: 'Import'
+        label: 'Label'
