--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -45,8 +45,9 @@ app:
         obsolete: 'Obsolète'
     course_info_field:
       label:
-        import: 'Import'
         label: 'Label'
+        mannually_duplication: 'Duplication manuelle'
+        automatic_duplication: 'Duplication depuis CSV'
     global:
       action: 'Action'
     duplicate_course_info:
@@ -56,7 +57,7 @@ app:
       label:
         user: 'Utilisateur'
         permission: 'Permission'
-    import_mcc:
+    import:
       label:
         csv: 'Fichier au format CSV'
 
