--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -14,6 +14,7 @@ evaluation: 'évaluation'
 list of activity: Liste des activités
 list of evaluation: Liste des évaluations
 
+
 app:
   form:
     activity:
@@ -65,3 +66,11 @@ app:
     permission:
       WRITE: 'Ecriture'
       READ: 'Lecture'
+    level:
+      beginner: 'Débutant'
+      intermediate: 'Intermédiaire'
+      advanced: 'Avancé'
+    teaching_mode:
+      class: 'Présentiel'
+      hybrid: 'Hybride'
+      distant: 'A distance'
