message fix nomenclature

--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -65,14 +65,14 @@ app:
         password_matching: Les deux mots de passe ne sont pas identiques
     activity:
       label:
-        obsolete: 'Obsolète'
-        activityTypes: 'Types'
-        label: 'Intitulé'
-        mode: 'Mode'
-        grp: 'Groupe'
+        obsolete: Obsolète
+        activityTypes: Types
+        label: Intitulé
+        mode: Mode
+        grp: Groupe
     activity_type:
       label:
-        label: 'Titre'
+        label: Titre
     course_info:
       label:
         title: Titre
