Liste des groupes dans l'administration

--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -128,6 +128,10 @@ app:
     import:
       label:
         csv: Fichier au format CSV
+    groups:
+      label:
+        label: 'Label'
+        obsolete: 'Obsolète'
 
   general:
     button:
