--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -4,6 +4,10 @@ ROLE_ADMIN_YEAR: Gestion des années
 ROLE_ADMIN_YEAR_LIST: Consulter la liste des années
 ROLE_ADMIN_YEAR_CREATE: Créer une année
 ROLE_ADMIN_YEAR_UPDATE: Modifier une année
+ROLE_ADMIN_ACTIVITY: Gestion des activités
+ROLE_ADMIN_ACTIVITY_LIST: Consulter la liste des activités
+ROLE_ADMIN_ACTIVITY_CREATE: Créer une activité
+ROLE_ADMIN_ACTIVITY_UPDATE: Modifier une activité
 ROLE_API: Utilisateur de l'API
 ROLE_API_GET_COURSE: Récupérer un cours par son id
 ROLE_API_GET_COURSES: Récupérer une liste de cours
