--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -222,6 +222,7 @@ app:
   general:
     button:
       add: Ajouter
+      cancel: Annuler
       edit: Modifier
       delete: Supprimer
       duplicate: Dupliquer
