--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -12,6 +12,10 @@ ROLE_ADMIN_ACTIVITYMODE: Gestion des modes d'activités
 ROLE_ADMIN_ACTIVITYMODE_LIST: Consulter la liste des modes d'activités
 ROLE_ADMIN_ACTIVITYMODE_CREATE: Créer un mode d'activité
 ROLE_ADMIN_ACTIVITYMODE_UPDATE: Modifier un mode d'activité
+ROLE_ADMIN_ACTIVITYTYPE: Gestion des types d'activités
+ROLE_ADMIN_ACTIVITYTYPE_LIST: Consulter la liste des types d'activités
+ROLE_ADMIN_ACTIVITYTYPE_CREATE: Créer un type d'activité
+ROLE_ADMIN_ACTIVITYTYPE_UPDATE: Modifier un type d'activité
 ROLE_API: Utilisateur de l'API
 ROLE_API_GET_COURSE: Récupérer un cours par son id
 ROLE_API_GET_COURSES: Récupérer une liste de cours
