--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -17,6 +17,10 @@ ROLE_ADMIN_ACTIVITYTYPE: Gestion des types d'activités
 ROLE_ADMIN_ACTIVITYTYPE_LIST: Consulter la liste des types d'activités
 ROLE_ADMIN_ACTIVITYTYPE_CREATE: Créer un type d'activité
 ROLE_ADMIN_ACTIVITYTYPE_UPDATE: Modifier un type d'activité
+ROLE_ADMIN_CAMPUS: Gestion des campus
+ROLE_ADMIN_CAMPUS_LIST: Consulter la liste des campus
+ROLE_ADMIN_CAMPUS_CREATE: Créer un campus
+ROLE_ADMIN_CAMPUS_UPDATE: Modifier un campus
 ROLE_API: Utilisateur de l'API
 ROLE_API_GET_COURSE: Récupérer un cours par son id
 ROLE_API_GET_COURSES: Récupérer une liste de cours
