--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -161,6 +161,9 @@ app:
       distant: A distance
 
   form:
+    notification:
+      label:
+        message: 'Message'
     cron:
       label:
         label: 'Label'
