--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -21,6 +21,10 @@ ROLE_ADMIN_CAMPUS: Gestion des campus
 ROLE_ADMIN_CAMPUS_LIST: Consulter la liste des campus
 ROLE_ADMIN_CAMPUS_CREATE: Créer un campus
 ROLE_ADMIN_CAMPUS_UPDATE: Modifier un campus
+ROLE_ADMIN_DOMAIN: Gestion des domaines
+ROLE_ADMIN_DOMAIN_LIST: Consulter la liste des domaines
+ROLE_ADMIN_DOMAIN_CREATE: Créer un domaine
+ROLE_ADMIN_DOMAIN_UPDATE: Modifier un domaine
 ROLE_API: Utilisateur de l'API
 ROLE_API_GET_COURSE: Récupérer un cours par son id
 ROLE_API_GET_COURSES: Récupérer une liste de cours
