--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -25,6 +25,10 @@ ROLE_ADMIN_DOMAIN: Gestion des domaines
 ROLE_ADMIN_DOMAIN_LIST: Consulter la liste des domaines
 ROLE_ADMIN_DOMAIN_CREATE: Créer un domaine
 ROLE_ADMIN_DOMAIN_UPDATE: Modifier un domaine
+ROLE_ADMIN_EQUIPMENT: Gestion des équipements
+ROLE_ADMIN_EQUIPMENT_LIST: Consulter la liste des équipement
+ROLE_ADMIN_EQUIPMENT_CREATE: Créer un équipement
+ROLE_ADMIN_EQUIPMENT_UPDATE: Modifier un équipement
 ROLE_API: Utilisateur de l'API
 ROLE_API_GET_COURSE: Récupérer un cours par son id
 ROLE_API_GET_COURSES: Récupérer une liste de cours
