--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -33,6 +33,10 @@ ROLE_ADMIN_LANGUAGE: Gestion des langues
 ROLE_ADMIN_LANGUAGE_LIST: Consulter la liste des langues
 ROLE_ADMIN_LANGUAGE_CREATE: Créer une langue
 ROLE_ADMIN_LANGUAGE_UPDATE: Modifier une langue
+ROLE_ADMIN_PERIOD: Gestion des périodes
+ROLE_ADMIN_PERIOD_LIST: Consulter la liste des périodes
+ROLE_ADMIN_PERIOD_CREATE: Créer une période
+ROLE_ADMIN_PERIOD_UPDATE: Modifier une période
 ROLE_API: Utilisateur de l'API
 ROLE_API_GET_COURSE: Récupérer un cours par son id
 ROLE_API_GET_COURSES: Récupérer une liste de cours
@@ -58,6 +62,7 @@ ROLE_API_GET_DOMAIN: Récupérer un domaine par son id
 ROLE_API_GET_DOMAINS: Récupérer une liste de domaines
 ROLE_API_GET_LANGUAGE: Récupérer une langue par son id
 ROLE_API_GET_LANGUAGES: Récupérer une liste de langues
+
 collective: Collectif
 groups: En groupe
 individual: Individuel
@@ -197,6 +202,10 @@ app:
     activity_type:
       label:
         label: Titre
+    period:
+      label:
+        obsolete: Obsolète
+        label: Intitulé
     course_info:
       label:
         title: Titre
