--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -37,6 +37,10 @@ ROLE_ADMIN_PERIOD: Gestion des périodes
 ROLE_ADMIN_PERIOD_LIST: Consulter la liste des périodes
 ROLE_ADMIN_PERIOD_CREATE: Créer une période
 ROLE_ADMIN_PERIOD_UPDATE: Modifier une période
+ROLE_ADMIN_STRUCTURE: Gestion des structures
+ROLE_ADMIN_STRUCTURE_LIST: Consulter la liste des structures
+ROLE_ADMIN_STRUCTURE_CREATE: Créer une structure
+ROLE_ADMIN_STRUCTURE_UPDATE: Modifier une structure
 ROLE_API: Utilisateur de l'API
 ROLE_API_GET_COURSE: Récupérer un cours par son id
 ROLE_API_GET_COURSES: Récupérer une liste de cours
