Refacto + secure CriticalAchievement controller

--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -5,6 +5,10 @@ ROLE_ADMIN_YEAR: Gestion des années
 ROLE_ADMIN_YEAR_LIST: Consulter la liste des années
 ROLE_ADMIN_YEAR_CREATE: Créer une année
 ROLE_ADMIN_YEAR_UPDATE: Modifier une année
+ROLE_ADMIN_CRITICAL_ACHIEVEMENT: Gestion des apprentissages critiques
+ROLE_ADMIN_CRITICAL_ACHIEVEMENT_LIST: Consulter la liste des apprentissages critiques
+ROLE_ADMIN_CRITICAL_ACHIEVEMENT_CREATE: Créer un apprentissage critique
+ROLE_ADMIN_CRITICAL_ACHIEVEMENT_UPDATE: Modifier un apprentissage critique
 ROLE_ADMIN_ACTIVITY: Gestion des activités
 ROLE_ADMIN_ACTIVITY_LIST: Consulter la liste des activités
 ROLE_ADMIN_ACTIVITY_CREATE: Créer une activité
@@ -115,7 +119,7 @@ app:
       activity:
         activity_mode: Mode d'enseignement
         activity_type: Type d'activité
-        control: Type de contrôle (Continu / Terminal) :
+        control: 'Type de contrôle (Continu / Terminal) :'
         delete: Êtes-vous sûr(e) de vouloir supprimer l'activité "%label%" ?
         description: Description de l'activité (maximum 255 caractères)
         evaluable: Cette activité est-elle évaluable ?
