lister les syllabus d'un cours avec leurs actions done

--- a/app/Resources/translations/messages.de.yml
+++ b/app/Resources/translations/messages.de.yml
@@ -256,7 +256,7 @@ app:
     course:
       label:
         type: Type
-        code: Code établissement
+        code: Ich vein der
         parents: Cours parents
         title: Titre
         synchronized: Synchronisé
