--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -45,6 +45,10 @@ ROLE_ADMIN_STRUCTURE: Gestion des structures
 ROLE_ADMIN_STRUCTURE_LIST: Consulter la liste des structures
 ROLE_ADMIN_STRUCTURE_CREATE: Créer une structure
 ROLE_ADMIN_STRUCTURE_UPDATE: Modifier une structure
+ROLE_ADMIN_USER: Gestion des utilisateurs
+ROLE_ADMIN_USER_LIST: Consulter la liste des utilisateurs
+ROLE_ADMIN_USER_CREATE: Créer un utilisateur
+ROLE_ADMIN_USER_UPDATE: Modifier un utilsateur
 ROLE_API: Utilisateur de l'API
 ROLE_API_GET_COURSE: Récupérer un cours par son id
 ROLE_API_GET_COURSES: Récupérer une liste de cours
