student view presentation v1

--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -137,6 +137,7 @@ app:
   presentation:
     view:
       general:
+        campus: Campus
         domain: Domaine
         empty_summary: Vous n'avez pas renseigné de résumé
         label: Informations générales
