scroll spy need "if" in <body>

--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -203,6 +203,7 @@ app:
     student:
       tabs:
         presentation: Présentation
+        objectives: Objectifs
   const:
     cron:
       status:
