--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -214,8 +214,19 @@ app:
   view:
     student:
       activities:
+        evaluable: Évaluable
+        evaluation_rate: Coefficient (%)
+        mode: Mode
         title: Nom de l'activité
-
+        type: Type
+      equipments:
+        description: Description
+        bibliographic_resources: Eléments bibliographiques
+        educational_resources: Ressources pédagogiques
+        list: Liste des équipements
+      info:
+        agenda: Informations dont vous disposez sur le calendrier du cours, des examens…
+        organization: Organisation du cours
       objectives:
         achievements_list: Liste des objectifs
         critical_achievements_list: Liste des apprentissages
@@ -223,8 +234,11 @@ app:
         tutoring_resources_list: Liste des rémédiations
       tabs:
         activities: Activités
-        presentation: Présentation
+        equipments: Équipements
+        evaluation: Modalités d'évaluation
+        info: Informations pratiques
         objectives: Objectifs
+        presentation: Présentation
   const:
     job:
       status:
