Change locale position in admin routes

--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -92,6 +92,10 @@ list of evaluation: Liste des évaluations
 
 
 app:
+  locale:
+    fr: 'Français'
+    en: 'Anglais'
+    de: 'Allemand'
   activities:
     view:
       activity:
@@ -303,7 +307,6 @@ app:
       label:
         obsolete: 'obsolète'
         label: 'Intitulé'
-        locale: 'Locale'
 
   general:
     button:
