--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -74,6 +74,9 @@ ROLE_API_ACTIVITY_TYPE_VIEW: Voir un type d'activité
 ROLE_API_CRITICAL_ACHIEVEMENT: Gestion des apprentissages critiques
 ROLE_API_CRITICAL_ACHIEVEMENT_LIST: Lister les apprentissages critiques
 ROLE_API_CRITICAL_ACHIEVEMENT_VIEW: Voir un apprentissage critique
+ROLE_API_CAMPUS: Gestion des campus
+ROLE_API_CAMPUS_LIST: Lister les campus
+ROLE_API_CAMPUS_VIEW: Voir un campus
 collective: Collectif
 groups: En groupe
 individual: Individuel
