--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -235,9 +235,14 @@ app:
         ue_include: UE comprenant
       objectives:
         achievements_list: Liste des objectifs
+        achievements_description: A la fin de ce cours, je devrais être capable de...
         critical_achievements_list: Liste des apprentissages
+        critical_achievements_description: Ce cours valide les apprentissages suivants
+        label: Objectifs du cours
         prerequisites_list: Liste des prérequis
+        prerequisites_description: Les prérequis pour choisir ce cours sont...
         tutoring_resources_list: Liste des rémédiations
+        tutoring_resources_description: Si je rencontre des difficultés, je peux...
       tabs:
         activities: Activités
         closing_remarks: Le mot de la fin
