--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -216,21 +216,21 @@ app:
       activities:
         evaluable: Évaluable
         evaluation_rate: Coefficient (%)
-        label: Séquences et activités
         mode: Mode
         title: Nom de l'activité
         type: Type
       equipments:
-        description: Description
         bibliographic_resources: Eléments bibliographiques
+        description: Description
         educational_resources: Ressources pédagogiques
         list: Liste des équipements
       info:
         agenda: Informations dont vous disposez sur le calendrier du cours, des examens…
+        closing_remarks: Le mot de la fin
+        evaluation: Modalités d'évaluation
         organization: Organisation du cours
       presentation:
         ecue: "ECUE appartenant à :"
-        label: Présentation du cours
         ue_giving: UE donnant
         ue_include: UE comprenant
       objectives:
@@ -238,19 +238,16 @@ app:
         achievements_description: A la fin de ce cours, je devrais être capable de...
         critical_achievements_list: Liste des apprentissages
         critical_achievements_description: Ce cours valide les apprentissages suivants
-        label: Objectifs du cours
         prerequisites_list: Liste des prérequis
         prerequisites_description: Les prérequis pour choisir ce cours sont...
         tutoring_resources_list: Liste des rémédiations
         tutoring_resources_description: Si je rencontre des difficultés, je peux...
       tabs:
-        activities: Activités
-        closing_remarks: Le mot de la fin
-        equipments: Équipements
-        evaluation: Modalités d'évaluation
+        activities: Séquences et activités
+        equipments: Matériel et ressources
         info: Informations pratiques
-        objectives: Objectifs
-        presentation: Présentation
+        objectives: Objectifs du cours
+        presentation: Présentation du cours
   const:
     job:
       status:
