--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -254,29 +254,33 @@ app:
         description: Description
         educational_resources: Ressources pédagogiques
         list: Liste des équipements
+        required_equipments: Matériel nécessaire
       info:
         agenda: Informations dont vous disposez sur le calendrier du cours, des examens…
         closing_remarks: Le mot de la fin
         evaluation: Modalités d'évaluation
         organization: Organisation du cours
-      presentation:
-        ecue: "ECUE appartenant à :"
-        ue_giving: UE donnant
-        ue_include: UE comprenant
       objectives:
         achievements_list: Liste des objectifs
         achievements_description: A la fin de ce cours, je devrais être capable de...
         critical_achievements_list: Liste des apprentissages
         critical_achievements_description: Ce cours valide les apprentissages suivants
+      prerequisites:
         prerequisites_list: Liste des prérequis
         prerequisites_description: Les prérequis pour choisir ce cours sont...
         tutoring_resources_list: Liste des rémédiations
         tutoring_resources_description: Si je rencontre des difficultés, je peux...
+      presentation:
+        nb_ects: (%ects% ECTS)
+        nb_ecue: UE comprenant %ecue% ECUE
+        structure: Composante
+        title: ECUE appartenant à %title%
       tabs:
         activities: Séquences et activités
         equipments: Matériel et ressources
         info: Informations pratiques
         objectives: Objectifs du cours
+        prerequisites: Prérequis
         presentation: Présentation du cours
   const:
     job:
